arm64: dts: renesas: r8a779f0: Enable IPMMU main and HC/DS0 caches
Enable IPMMU-MM and IPMMU-HC/DS0 by default.

Signed-off-by: Nam Nguyen <nam.nguyen.yh@renesas.com>

--- a/arch/arm64/boot/dts/renesas/r8a779f0-native.dtsi
+++ b/arch/arm64/boot/dts/renesas/r8a779f0-native.dtsi
@@ -198,6 +198,18 @@
 			status = "okay";
 		};
 
+		ipmmu_mm: iommu@eefc0000 {
+			status = "okay";
+		};
+
+		ipmmu_ds0: iommu@eed00000 {
+			status = "okay";
+		};
+
+		ipmmu_hc: iommu@eed40000 {
+			status = "okay";
+		};
+
 		qos@e67e0000 {
 			status = "okay";
 		};
