arm64: dts: renesas: r8a779f0: Enable IPMMU for eMMC
Enable IPMMU for eMMC by default.

Signed-off-by: Nam Nguyen <nam.nguyen.yh@renesas.com>

--- a/arch/arm64/boot/dts/renesas/r8a779f0-native.dtsi
+++ b/arch/arm64/boot/dts/renesas/r8a779f0-native.dtsi
@@ -182,6 +182,10 @@
 		/delete-node/rfso@ffe89000;
 		/delete-node/rfso@ffe8a000;
 
+		mmc0: mmc@ee140000 {
+			iommus = <&ipmmu_ds0 32>;
+		};
+
 		rt_dmac0: dma-controller@ffd60000 {
 			status = "okay";
 		};
